@@ -24,8 +24,8 @@ class MatchServiceImplTest {
         //then
         List<Match> result = matchService.getMatches();
         assertEquals(1, result.size());
-        assertEquals(0, result.get(0).getHomeScore());
-        assertEquals(0, result.get(0).getAwayScore());
+        assertEquals(0, result.getFirst().getHomeScore());
+        assertEquals(0, result.getFirst().getAwayScore());
     }
 
     @Test
@@ -47,8 +47,8 @@ class MatchServiceImplTest {
         matchService.startMatch("Mexico", "Canada");
         List<Match> matches = matchService.getMatches();
         assertEquals(1, matches.size());
-        assertEquals(0, matches.get(0).getHomeScore());
-        assertEquals(0, matches.get(0).getAwayScore());
+        assertEquals(0, matches.getFirst().getHomeScore());
+        assertEquals(0, matches.getFirst().getAwayScore());
 
         //when
         matchService.updateScore("Mexico", 2, "Canada", 6);
@@ -56,8 +56,8 @@ class MatchServiceImplTest {
         //then
         matches = matchService.getMatches();
         assertEquals(1, matches.size());
-        assertEquals(2, matches.get(0).getHomeScore());
-        assertEquals(6, matches.get(0).getAwayScore());
+        assertEquals(2, matches.getFirst().getHomeScore());
+        assertEquals(6, matches.getFirst().getAwayScore());
     }
 
     @Test
@@ -67,8 +67,8 @@ class MatchServiceImplTest {
         matchService.startMatch("Mexico", "Canada");
         List<Match> matches = matchService.getMatches();
         assertEquals(1, matches.size());
-        assertEquals(0, matches.get(0).getHomeScore());
-        assertEquals(0, matches.get(0).getAwayScore());
+        assertEquals(0, matches.getFirst().getHomeScore());
+        assertEquals(0, matches.getFirst().getAwayScore());
 
         //when
 
@@ -84,8 +84,8 @@ class MatchServiceImplTest {
         matchService.startMatch("Mexico", "Canada");
         List<Match> matches = matchService.getMatches();
         assertEquals(1, matches.size());
-        assertEquals(0, matches.get(0).getHomeScore());
-        assertEquals(0, matches.get(0).getAwayScore());
+        assertEquals(0, matches.getFirst().getHomeScore());
+        assertEquals(0, matches.getFirst().getAwayScore());
 
         //when
 
